rustdocs/errors/rust-bitcoin-fuzz-fuzz_targets-consensus_encoding-decode_byte_vec.rs.txt
error[E0432]: unresolved import `bitcoin_consensus_encoding`
 --> ../rust-bitcoin/fuzz/fuzz_targets/consensus_encoding/decode_byte_vec.rs:1:5
  |
1 | use bitcoin_consensus_encoding::{ByteVecDecoder, Decoder};
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `bitcoin_consensus_encoding`
  |
help: you might be missing a crate named `bitcoin_consensus_encoding`, add it to your project and import it in your code
  |
1 + extern crate bitcoin_consensus_encoding;
  |

error[E0432]: unresolved import `honggfuzz`
 --> ../rust-bitcoin/fuzz/fuzz_targets/consensus_encoding/decode_byte_vec.rs:2:5
  |
2 | use honggfuzz::fuzz;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `honggfuzz`
  |
help: you might be missing a crate named `honggfuzz`, add it to your project and import it in your code
  |
1 + extern crate honggfuzz;
  |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
